# circuitpython-sevenseg

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yml
circuitpython_sevenseg/: __init__.py  sevenseg.py
circuitpython_sevenseg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: sevenseg_all_chars.py  sevenseg_simpletest.py
