[metadata]
name = circuitpython-sevenseg
version = 1.0.0
author = Kritish Mohapatra
author_email = kritishmohapatra06norisk@gmail.com
description = A lightweight CircuitPython library for controlling single-digit 7-segment displays
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kritishmohapatra/circuitpython-sevenseg
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: System :: Hardware
    Topic :: Software Development :: Embedded Systems
keywords = circuitpython, seven-segment, 7-segment, display, iot, embedded, pico, esp32, feather

[options]
packages = find:
python_requires = >=3.0

[options.packages.find]
exclude =
    examples*
    tests*